# weather-dashboard

./: .env.test  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: readings.py  stations.py
app/db/: models.py  seed.py  session.py
app/schemas/: reading.py  station.py
frontend/: Dockerfile  index.html  script.js
tests/: conftest.py  test_main.py  test_readings.py  test_stations.py
