[tool.poetry]
name = "weather-dashboard"
version = "0.1.0"
description = ""
authors = ["Michael B"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = "^0.27"
pytest = "^8.0"
httpx = "^0.27"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
